Refactor organization-related tests to use Collections.singletonList for single-item lists and improve assertions for clarity